--- a/src/components/HelpPanel/HelpPanelTabs/Feedback/FeedbackPanel.scss
+++ b/src/components/HelpPanel/HelpPanelTabs/Feedback/FeedbackPanel.scss
@@ -3,13 +3,13 @@
 }
 
 .feedback-card {
-  background-color: #f5f5f5;
-  border: 1px solid #d2d2d2;
+  background-color: var(--pf-t--global--background--color--secondary--default);
+  border: 1px solid var(--pf-t--global--border--color--default);
 }
 
 .feedback-card-icon {
-  margin-right: 8px;
-  color: #0066cc;
+  margin-right: var(--pf-t--global--spacer--sm);
+  color: var(--pf-t--global--color--brand--default);
 }
 
 .feedback-external-link-icon {
