--- a/src/components/common/BookmarkIcon.scss
+++ b/src/components/common/BookmarkIcon.scss
@@ -1,6 +1,6 @@
 .lr-c-bookmark__icon {
-  color: var(--pf-t--color--blue--50);
+  color: var(--pf-t--global--color--brand--default);
   &:hover {
-    color: var(--pf-t--color--blue--60);
+    color: var(--pf-t--global--color--brand--hover);
   }
 }
